--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.JavaDetail">
+    android:orientation="vertical"
+    tools:context=".views.Detail">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title"
         android:text="Title"
+        android:textStyle="bold"
         android:layout_marginTop="14dp"
         android:textSize="24sp"
         android:layout_gravity="center"
         android:layout_marginBottom="12dp"
+        android:textColor="@color/lavender"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="20dp"
+        android:text="Language"
+        android:layout_gravity="center"
+        android:id="@+id/language"
+        android:textSize="18sp"
         android:textColor="@color/lavender"/>
 
     <TextView
