--- a/app/src/main/res/layout/activity_python_detail.xml
+++ b/app/src/main/res/layout/activity_python_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PythonDetail">
+    tools:context=".views.PythonDetail">
 
     <TextView
         android:layout_width="wrap_content"
